darkmode loader fixed, example for slow response

--- a/examples/index.html
+++ b/examples/index.html
@@ -19,6 +19,7 @@
 
 	<ul class="list-group py-3">
 		<li class="list-group-item"><a href="datatable.html">DataTable</a></li>
+		<li class="list-group-item"><a href="datatable-slow-response.html">DataTable with slow response</a></li>
 	</ul>
 
 	<a href="https://github.com/avalynx/avalynx-datatable" target="_blank" class="btn btn-primary">AvalynxDataTable on GitHub</a> <a href="https://github.com/avalynx/" target="_blank" class="btn btn-primary">Avalynx on GitHub</a>
