--- a/examples/mdb-datatable.html
+++ b/examples/mdb-datatable.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>DataTable with slow response | AvalynxDataTable Example</title>
+	<title>MDB DataTable | AvalynxDataTable Example</title>
 	<!-- Bootstrap 5.3 -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet"/>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script>
 	<!-- AvalynxDatatable 0.0.1 -->
 	<link href="/dist/css/avalynx-datatable.css" rel="stylesheet">
 	<script src="/dist/js/avalynx-datatable.js"></script>
@@ -28,14 +28,14 @@
 	<br/>
 	<br/>
 	<div class="alert alert-info">
-		This is an example of the AvalynxDataTable. It is a simple table with some random data. The table is sortable, searchable and paginated. The data is fetched from a PHP script.
+		This is an example of the AvalynxDataTable with <a href="https://mdbootstrap.com/" target="_blank">Material Design for Bootstrap</a>. It is a simple table with some random data. The table is sortable, searchable and paginated. The data is fetched from a PHP script.
 	</div>
 
 
 	<script>
 
 		new AvalynxDataTable("avalynx-datatable", {
-			apiUrl: "result-slow.php",
+			apiUrl: "result.php",
 			perPage: 10,
 			search: "",
 			sorting: {
