--- a/examples/mdb-datatable.html
+++ b/examples/mdb-datatable.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MDB DataTable | AvalynxDataTable Example</title>
-	<!-- Bootstrap 5.3 -->
+	<!-- Material Design for Bootstrap 7.1.0 -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet"/>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script>
 	<!-- AvalynxDatatable 0.0.1 -->
