--- a/examples/index.html
+++ b/examples/index.html
@@ -19,7 +19,7 @@
 
 	<ul class="list-group py-3">
 		<li class="list-group-item"><a href="datatable.html">DataTable</a></li>
-		<li class="list-group-item"><a href="mdb-datatable.html">MDB DataTable</a></li>
+		<li class="list-group-item"><a href="mdb-datatable.html">MDB DataTable (alpha)</a></li>
 		<li class="list-group-item"><a href="datatable-slow-response.html">DataTable with slow response</a></li>
 	</ul>
 
