--- a/examples/mdb-datatable.html
+++ b/examples/mdb-datatable.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>MDB DataTable | AvalynxDataTable Example</title>
+	<title>MDB DataTable (alpha) | AvalynxDataTable Example</title>
 	<!-- Material Design for Bootstrap 7.1.0 -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet"/>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script>
