--- a/examples/datatable.html
+++ b/examples/datatable.html
@@ -4,21 +4,31 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>DataTable | AvalynxDataTable Example</title>
+
 	<!-- Bootstrap 5.3 -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/js/bootstrap.bundle.min.js"></script>
+
+	<!-- Highlight.js 11.9 -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9/build/styles/default.min.css">
+	<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9/build/highlight.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9/build/languages/javascript.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9/build/styles/stackoverflow-light.min.css" id="hljsTheme">
+	<script>hljs.highlightAll();</script>
+
 	<!-- AvalynxDatatable 0.0.1 -->
-	<link href="/dist/css/avalynx-datatable.css" rel="stylesheet">
-	<script src="/dist/js/avalynx-datatable.js"></script>
+	<link href="../dist/css/avalynx-datatable.css" rel="stylesheet">
+	<script src="../dist/js/avalynx-datatable.js"></script>
+
 	<!-- Example helper -->
-	<link href="css/helper.css" rel="stylesheet">
-	<script src="js/helper.js"></script>
+	<link href="./css/helper.css" rel="stylesheet">
+	<script src="./js/helper.js"></script>
 </head>
 <body>
 
 <div class="container py-5">
 
-	<a class="btn btn-secondary float-end m-3" href="index.html">Back</a> 	<button id="modeToggle" class="btn btn-primary float-end m-3">Toggle to Dark Mode</button>
+	<a class="btn btn-secondary float-end m-3" href=".">Back</a> <button id="modeToggle" class="btn btn-primary float-end m-3">Toggle to Dark Mode</button>
 
 	<br/>
 	<br/>
@@ -30,7 +40,6 @@
 	<div class="alert alert-info">
 		This is an example of the AvalynxDataTable. It is a simple table with some random data. The table is sortable, searchable and paginated. The data is fetched from a PHP script.
 	</div>
-
 
 	<script>
 
@@ -53,5 +62,29 @@
 		});
 
 	</script>
+
+	<br/>
+	<h3>Source of example<a class="p-1 float-end btn btn-secondary btn-small" id="copyButton">Copy to clipboard</a></h3>
+	<pre><code class="language-javascript" id="codeBlock">
+new AvalynxDataTable("avalynx-datatable", {
+	apiUrl: "result.php",
+	perPage: 10,
+	search: "",
+	sorting: {
+		"name": "asc",
+		"age": "desc"
+	}
+}, {
+	showLabel: "Zeige",
+	entriesLabel: "Einträge",
+	searchLabel: "Suche",
+	previousLabel: "Zurück",
+	nextLabel: "Weiter",
+	showingEntries: (start, end, total) => `Zeige ${start} bis ${end} von ${total} Einträgen`,
+	showingFilteredEntries: (start, end, filtered, total) => `Zeige ${start} bis ${end} von ${filtered} Einträgen (gefiltert von ${total} Einträgen)`
+});
+	</code></pre>
+
+	<a href="https://github.com/avalynx/avalynx-datatable" target="_blank" class="btn btn-primary">AvalynxDataTable on GitHub</a> <a href="https://github.com/avalynx/" target="_blank" class="btn btn-primary">Avalynx on GitHub</a>
 
 </div>
