--- a/examples/index.html
+++ b/examples/index.html
@@ -4,12 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>AvalynxDataTable examples</title>
+
 	<!-- Bootstrap 5.3 -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/js/bootstrap.bundle.min.js"></script>
+
 	<!-- Example helper -->
-	<link href="css/helper.css" rel="stylesheet">
-	<script src="js/helper.js"></script>
+	<link href="./css/helper.css" rel="stylesheet">
+	<script src="./js/helper.js"></script>
 </head>
 <body>
 
@@ -19,7 +21,6 @@
 
 	<ul class="list-group py-3">
 		<li class="list-group-item"><a href="datatable.html">DataTable</a></li>
-		<li class="list-group-item"><a href="mdb-datatable.html">MDB DataTable (alpha)</a></li>
 		<li class="list-group-item"><a href="datatable-slow-response.html">DataTable with slow response</a></li>
 	</ul>
 
