--- a/examples/datatable-multiple-instances.html
+++ b/examples/datatable-multiple-instances.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>DataTable | AvalynxDataTable Example</title>
+	<title>DataTable multiple instances | AvalynxDataTable Example</title>
 
 	<!-- Bootstrap 5.3 -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -37,14 +37,20 @@
 	<div class="container" id="avalynx-datatable"></div>
 	<br/>
 	<br/>
+    <div class="container" id="avalynx-datatable2"></div>
+    <br/>
+    <br/>
 	<div class="alert alert-info">
-		This is an example of the AvalynxDataTable. It is a simple table with some random data. The table is sortable, searchable and paginated. The data is fetched from a PHP script.
+		This is an example of multiple instances of the AvalynxDataTable. It is a simple table with some random data. The table is sortable, searchable and paginated. The data is fetched from a PHP script.
 	</div>
 
 	<script>
 
 		new AvalynxDataTable("avalynx-datatable", {
 			apiUrl: "php/result.php",
+            apiParams: {
+                "key": "1-2-3-4-5-6-7-8-9-10"
+            },
 			perPage: 10,
 			search: "",
 			sorting: {
@@ -61,27 +67,56 @@
 			showingFilteredEntries: (start, end, filtered, total) => `Zeige ${start} bis ${end} von ${filtered} Einträgen (gefiltert von ${total} Einträgen)`
 		});
 
+        new AvalynxDataTable("avalynx-datatable2", {
+            apiUrl: "php/result2.get.php",
+            apiMethod: "GET",
+            apiParams: {
+                "key": "1-2-3-4-5-6-7-8-9-10"
+            },
+            listPerPage: [5, 10, 15, 20],
+            perPage: 5,
+            sorting: {
+                "price": "asc"
+            }
+        });
+
 	</script>
 
 	<br/>
 	<h3>Source of example<a class="p-1 float-end btn btn-secondary btn-small" id="copyButton">Copy to clipboard</a></h3>
 	<pre><code class="language-javascript" id="codeBlock">
 new AvalynxDataTable("avalynx-datatable", {
-	apiUrl: "php/result.php",
-	perPage: 10,
-	search: "",
-	sorting: {
-		"name": "asc",
-		"age": "desc"
-	}
+    apiUrl: "php/result.php",
+    apiParams: {
+        "key": "1-2-3-4-5-6-7-8-9-10"
+    },
+    perPage: 10,
+    search: "",
+    sorting: {
+        "name": "asc",
+        "age": "desc"
+    }
 }, {
-	showLabel: "Zeige",
-	entriesLabel: "Einträge",
-	searchLabel: "Suche",
-	previousLabel: "Zurück",
-	nextLabel: "Weiter",
-	showingEntries: (start, end, total) => `Zeige ${start} bis ${end} von ${total} Einträgen`,
-	showingFilteredEntries: (start, end, filtered, total) => `Zeige ${start} bis ${end} von ${filtered} Einträgen (gefiltert von ${total} Einträgen)`
+    showLabel: "Zeige",
+    entriesLabel: "Einträge",
+    searchLabel: "Suche",
+    previousLabel: "Zurück",
+    nextLabel: "Weiter",
+    showingEntries: (start, end, total) => `Zeige ${start} bis ${end} von ${total} Einträgen`,
+    showingFilteredEntries: (start, end, filtered, total) => `Zeige ${start} bis ${end} von ${filtered} Einträgen (gefiltert von ${total} Einträgen)`
+});
+
+new AvalynxDataTable("avalynx-datatable2", {
+    apiUrl: "php/result2.get.php",
+    apiMethod: "GET",
+    apiParams: {
+        "key": "1-2-3-4-5-6-7-8-9-10"
+    },
+    listPerPage: [5, 10, 15, 20],
+    perPage: 5,
+    sorting: {
+        "price": "asc"
+    }
 });
 	</code></pre>
 
