--- a/examples/index.html
+++ b/examples/index.html
@@ -22,6 +22,7 @@
 	<ul class="list-group py-3">
 		<li class="list-group-item"><a href="datatable.html">DataTable</a></li>
 		<li class="list-group-item"><a href="datatable-slow-response.html">DataTable with slow response</a></li>
+        <li class="list-group-item"><a href="datatable-multiple-instances.html">DataTable multiple instances</a></li>
 	</ul>
 
 	<a href="https://github.com/avalynx/avalynx-datatable" target="_blank" class="btn btn-primary">AvalynxDataTable on GitHub</a> <a href="https://github.com/avalynx/" target="_blank" class="btn btn-primary">Avalynx on GitHub</a>
