--- a/examples/datatable-slow-response.html
+++ b/examples/datatable-slow-response.html
@@ -17,11 +17,11 @@
 	<script>hljs.highlightAll();</script>
 
     <!-- AvalynxLoader 0.0.1 -->
-    <script src="../../avalynx-loader/dist/js/avalynx-loader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/avalynx-loader@0.0.1/dist/js/avalynx-loader.min.js"></script>
 
-	<!-- AvalynxDatatable 0.0.1 -->
-	<link href="../dist/css/avalynx-datatable.css" rel="stylesheet">
-	<script src="../dist/js/avalynx-datatable.js"></script>
+	<!-- AvalynxDatatable 0.0.2 -->
+    <link href="https://cdn.jsdelivr.net/npm/avalynx-datatable@0.0.2/dist/css/avalynx-datatable.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/avalynx-datatable@0.0.2/dist/js/avalynx-datatable.min.js"></script>
 
 	<!-- Example helper -->
 	<link href="./css/helper.css" rel="stylesheet">
