--- a/examples/datatable-slow-response.html
+++ b/examples/datatable-slow-response.html
@@ -19,7 +19,7 @@
     <!-- AvalynxLoader 0.0.1 -->
     <script src="https://cdn.jsdelivr.net/npm/avalynx-loader@0.0.1/dist/js/avalynx-loader.min.js"></script>
 
-	<!-- AvalynxDatatable 0.0.2 -->
+	<!-- AvalynxDataTable 0.0.2 -->
     <link href="https://cdn.jsdelivr.net/npm/avalynx-datatable@0.0.2/dist/css/avalynx-datatable.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/avalynx-datatable@0.0.2/dist/js/avalynx-datatable.min.js"></script>
 
@@ -57,15 +57,7 @@
             loader: new AvalynxLoader('#avalynx-datatable', {
                 className: 'spinner-border text-danger',
             })
-		}, {
-			showLabel: "Zeige",
-			entriesLabel: "Einträge",
-			searchLabel: "Suche",
-			previousLabel: "Zurück",
-			nextLabel: "Weiter",
-			showingEntries: (start, end, total) => `Zeige ${start} bis ${end} von ${total} Einträgen`,
-			showingFilteredEntries: (start, end, filtered, total) => `Zeige ${start} bis ${end} von ${filtered} Einträgen (gefiltert von ${total} Einträgen)`
-		});
+		}, {});
 
 	</script>
 
@@ -80,15 +72,7 @@ new AvalynxDataTable("avalynx-datatable", {
 		"name": "asc",
 		"age": "desc"
 	}
-}, {
-	showLabel: "Zeige",
-	entriesLabel: "Einträge",
-	searchLabel: "Suche",
-	previousLabel: "Zurück",
-	nextLabel: "Weiter",
-	showingEntries: (start, end, total) => `Zeige ${start} bis ${end} von ${total} Einträgen`,
-	showingFilteredEntries: (start, end, filtered, total) => `Zeige ${start} bis ${end} von ${filtered} Einträgen (gefiltert von ${total} Einträgen)`
-});
+}, {});
 	</code></pre>
 
 	<a href="https://github.com/avalynx/avalynx-datatable" target="_blank" class="btn btn-primary">AvalynxDataTable on GitHub</a> <a href="https://github.com/avalynx/" target="_blank" class="btn btn-primary">Avalynx on GitHub</a>
