--- a/examples/datatable.html
+++ b/examples/datatable.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9/build/styles/stackoverflow-light.min.css" id="hljsTheme">
 	<script>hljs.highlightAll();</script>
 
-	<!-- AvalynxDatatable 0.0.2 -->
+	<!-- AvalynxDataTable 0.0.2 -->
     <link href="https://cdn.jsdelivr.net/npm/avalynx-datatable@0.0.2/dist/css/avalynx-datatable.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/avalynx-datatable@0.0.2/dist/js/avalynx-datatable.min.js"></script>
 
@@ -51,15 +51,7 @@
 				"name": "asc",
 				"age": "desc"
 			}
-		}, {
-			showLabel: "Zeige",
-			entriesLabel: "Einträge",
-			searchLabel: "Suche",
-			previousLabel: "Zurück",
-			nextLabel: "Weiter",
-			showingEntries: (start, end, total) => `Zeige ${start} bis ${end} von ${total} Einträgen`,
-			showingFilteredEntries: (start, end, filtered, total) => `Zeige ${start} bis ${end} von ${filtered} Einträgen (gefiltert von ${total} Einträgen)`
-		});
+		}, {});
 
 	</script>
 
@@ -74,15 +66,7 @@ new AvalynxDataTable("avalynx-datatable", {
 		"name": "asc",
 		"age": "desc"
 	}
-}, {
-	showLabel: "Zeige",
-	entriesLabel: "Einträge",
-	searchLabel: "Suche",
-	previousLabel: "Zurück",
-	nextLabel: "Weiter",
-	showingEntries: (start, end, total) => `Zeige ${start} bis ${end} von ${total} Einträgen`,
-	showingFilteredEntries: (start, end, filtered, total) => `Zeige ${start} bis ${end} von ${filtered} Einträgen (gefiltert von ${total} Einträgen)`
-});
+}, {});
 	</code></pre>
 
 	<a href="https://github.com/avalynx/avalynx-datatable" target="_blank" class="btn btn-primary">AvalynxDataTable on GitHub</a> <a href="https://github.com/avalynx/" target="_blank" class="btn btn-primary">Avalynx on GitHub</a>
