Update JavaScript core logic for modularity, optimize DOM interactions, ensure better parameter validation, and streamline loader/spinner handling. Update examples to reference latest script and stylesheet internally.

--- a/examples/datatable-slow-response.html
+++ b/examples/datatable-slow-response.html
@@ -16,12 +16,12 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9/build/styles/stackoverflow-light.min.css" id="hljsTheme">
 	<script>hljs.highlightAll();</script>
 
-    <!-- AvalynxLoader 0.0.1 -->
-    <script src="https://cdn.jsdelivr.net/npm/avalynx-loader@0.0.1/dist/js/avalynx-loader.min.js"></script>
+    <!-- AvalynxLoader 1.0.1 -->
+    <script src="https://cdn.jsdelivr.net/npm/avalynx-loader@1.0.1/dist/js/avalynx-loader.min.js"></script>
 
-	<!-- AvalynxDataTable 1.0.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/avalynx-datatable@1.0.1/dist/css/avalynx-datatable.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/avalynx-datatable@1.0.1/dist/js/avalynx-datatable.min.js"></script>
+    <!-- AvalynxDataTable -->
+    <link href="../dist/css/avalynx-datatable.css" rel="stylesheet">
+    <script src="../dist/js/avalynx-datatable.js"></script>
 
 	<!-- Example helper -->
 	<link href="./css/helper.css" rel="stylesheet">
